library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/SF360_Bundle_Key__mdt.object-meta.xml
<CustomObject>
    <description>Registered Salesforce Headless 360 bundle signing keys for orgs without Certificate support.</description>
    <label>SF360 Bundle Key</label>
    <pluralLabel>SF360 Bundle Keys</pluralLabel>
</CustomObject>