library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/IssuerUserId__c.field-meta.xml
<CustomField>
    <fullName>IssuerUserId__c</fullName>
    <description>Salesforce user or local issuer identity that registered the key.</description>
    <label>Issuer User Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>