library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/Kid__c.field-meta.xml
<CustomField>
    <fullName>Kid__c</fullName>
    <description>JWS key identifier.</description>
    <externalId>true</externalId>
    <label>KID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>