library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/PreviousReceiptHash__c.field-meta.xml
<CustomField>
    <fullName>PreviousReceiptHash__c</fullName>
    <description>SHA-256 hash of the previous full receipt, or GENESIS for the first key.</description>
    <label>Previous Receipt Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>