library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/PublicKeyPem__c.field-meta.xml
<CustomField>
    <fullName>PublicKeyPem__c</fullName>
    <description>PEM-encoded Ed25519 public key used to verify bundle JWS signatures.</description>
    <label>Public Key PEM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>