library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <description>Signed possession receipt whose hash links this key into the CMDT receipt chain.</description>
    <label>Receipt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>