library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/RegisteredAt__c.field-meta.xml
<CustomField>
    <fullName>RegisteredAt__c</fullName>
    <description>UTC timestamp when this key was registered.</description>
    <label>Registered At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>