library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/RetiredAt__c.field-meta.xml
<CustomField>
    <fullName>RetiredAt__c</fullName>
    <description>UTC timestamp when this key was retired. Retired keys remain for historical verification.</description>
    <label>Retired At</label>
    <type>DateTime</type>
</CustomField>