library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Key__mdt/fields/RetiredReason__c.field-meta.xml
<CustomField>
    <fullName>RetiredReason__c</fullName>
    <description>Reason supplied when retiring or revoking the key.</description>
    <label>Retired Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>